--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-Biomatrial Data Science
+![image](https://user-images.githubusercontent.com/101681195/181381543-572e5c02-07a2-48b5-b4a8-3b47e0373059.png)
+
+# Biomedical Data Science
+Biomedical sciences are a set of sciences to develop knowledge and technology that practice in healthcare or public health.  Biomedical engineering, medical microbiology, clinical epidemiology, genetic epidemiology, clinical virology, and, etc. are part of biomedical sciences.  Now adays, mathematics, statistics, and bioinformatics are relevant basic sciences that have a pivotal role in biomedical sciences. These basic sciences are tools for understanding biological data, in particular when the data sets are large and complex. 
+Biomedical data science is a growing new filed involves the analysis of large-scale biomedical datasets to understand how biologic systems function, disease mechanisms, discover new drugs and improve health care at cheaper costs. 
+# Research in Biomedical Data Science
+Important scientific fields in Biomedical Data Science include:
+- Computational Science
+
+  Using computing technology to address broad questions in personalized medicine.
+
+- Biomedical Data
+
+
+  Health care data, genomic data, and sensor data are big data sets that biomedical researchers must manage them carfully. 
+  
+- Machine Learning 
+
+  Deep learning system (also known as deep structured learning) is part of a broader family of machine learning methods based on artificial neural networks have been applied to fields including bioinformatics, drug design, medical image analysis. 
+
+# Companies in Biomedical Data Science
+
+![image](https://user-images.githubusercontent.com/101681195/175839500-ab75cd3b-11f4-4b27-8b6d-036a0b60759a.png)
+
+**BenchSci** is the advanced reagent selection technology in life-saving research. BenSci uses Al trained to read and understand the world’s published experimental evidence to help finding the best reagent for researchers. Currently, over 48,700 scientists in 16 of the top 20 pharmaceutical companies and more than 4,450 academic institutions use BenchSci’s AI-Assisted Antibody Selection to plan more successful experiments, with proven savings of millions per year in hard costs alone. 
+
+For more information visit  website [BenchSci Website ](https://www.benchsci.com/).
+
+![image](https://user-images.githubusercontent.com/101681195/176076388-a548bd69-27bc-4951-8342-72e8767ca7a9.png)
+
+**DeepMind Technologies** is AI research laboratory acquired by Google. DeepMind turned its AI to predict proteins’ 3D structure. The AlphaFold (protein structure database) builds on decades of studies done by scientists using traditional methods to determine the structure of proteins. Predicting the exact structure of a protein remains an expensive and often time-consuming process. Finding a way to predict the structure of millions of unknown proteins could help us tackle disease and more quickly find new medicines. 
+
+For more information visit  website [DeepMind Website ](https://www.deepmind.com/).
+
+
+![image](https://user-images.githubusercontent.com/101681195/175840823-139c978c-b262-4b05-a38d-a859245d3075.png)
+
+**Prognos** is a healthcare data marketplace that simplifies the data selection and contracting process by providing a self-service online destination where customers can easily curate and purchase the health data that they need it. . They are integrating billions of data including harmonized lab data on 325M de-identified patients from multiple sources including lab results, prescription and medical claims. 
+
+For more information visit  website [Prognos Website ](https://prognoshealth.com/).
+
+![image](https://user-images.githubusercontent.com/101681195/176076203-2dc00d45-0a8a-4ded-82f4-a93a2b309137.png)
+
+**Scailyte** is start-up specialized in using AI to discover biomarkers from high-dimensional single-cell data. AI platform combines features to integrate different datasets and uses data augmentation to extract composite biomarkers associated with different cell populations. These features result in very high discovery success rates from a limited number of samples, with actionable insights for the basis of assay development.
+
+For more information visit  website [Scailyte Website ](https://scailyte.com/).
+
+![image](https://user-images.githubusercontent.com/101681195/176069107-1289ce16-51ac-4081-9d15-223de856e324.png)
+
+
+**DeepTox** is group from university of Linz that developed performance of Deep Learning in computational toxicity prediction. DeepTox normalizes the chemical representations of the compounds. Then it computes a large number of chemical descriptors that are used as input to machine learning methods. In its next step, DeepTox trains models, evaluates them, and combines the best of them to ensembles. Finally, DeepTox predicts the toxicity of new compounds.
+
+For read more about their platform check their [published Article](https://www.frontiersin.org/articles/10.3389/fenvs.2015.00080/full).
+
+![image](https://user-images.githubusercontent.com/101681195/176071775-b5efbf4f-27cb-43e7-89eb-67741324e647.png)
+
+**Schrödinger** is a physics-based computational platform leverages a deep understanding of physics, chemistry, and predictive modeling to predict properties of potential small-molecule drug candidates such as their binding affinity for protein targets. Schrödinger’s biologics drug discovery tools enable researchers to discover high-quality, novel molecules more rapidly, at lower cost. The platform provide a unified entry point for molecular insights and access to integrated solutions for structure prediction, characterization and liability analysis and protein engineering.
+
+For more information visit  website [Schrodinger Website ](https://www.schrodinger.com/).
+
+![image](https://user-images.githubusercontent.com/101681195/176072555-7e041029-7b28-4da2-a9fc-a313203789cf.png)
+
+Evotec is a German biotechnology company announced a phase 1 clinical trial on a new anticancer molecule designed by Exscientia’s ‘Centaur Chemist’ AI design platform. The traditional discovery process of  4–5 years to come up with the drug candidate was reduced to 8 months by using AI platform . This system can computationally sort through and compare various properties of millions of potential A2 receptor antagonist designed to help T cells fight solid tumors, looking for 10 or 20 to synthesize, test and optimize in lab experiments before selecting the final drug candidate for clinical trials.
+
+For more information visit  website [Evotec Website ](https://www.evotec.com/en).
+
+![image](https://user-images.githubusercontent.com/101681195/176078438-76b41f11-cf98-4742-8e4c-57b43425f825.png)
+
+**Kantify** is an AI technology company specialized in life sciences. They are studying on developing an AI software solution to enhance the discovery of novel therapeutics, improve pathology detection, and enable personalized medicines. Medical professionals are required to examine complex images like X-rays, CT scans and MRIs to analyze patient health and initiate diagnosis. AI-based solutions with analyze patient’s symptoms helps to narrow down the diagnosis choices. Machine Learning (ML) algorithms have the ability to ‘improve’ and ‘learn’ to recognize patterns of disease features, such as the appearance of breast cancers on mammograms as well as analyzing surrounding textural features. ML algorithms are the perfect "tool" for improved medical diagnostics since they can identify data associations that are "invisible" to the human eye.
+
+For more information visit  website [Kantify Website ](https://www.kantify.com/).
+
+![image](https://user-images.githubusercontent.com/101681195/176080029-9ea77f46-ad04-4428-ad20-fe7ede5a5486.png)
+
+Visikol is a contract research services company that expertise in advanced imaging and image analysis, 3D cell culture models and AI-enhanced digital pathology. the Visikol team uses advanced automated and AI-enhanced image processing techniques to quantitatively analyze bioimaging data. Using a combination of robotics, artificial intelligence, advanced genomics, and 3D bioprinting, innovative technologies enable researchers and practitioners in the life sciences to conduct cell line development, perform high-throughput drug screening and diagnostics, and print human tissues and organs for the medical, pharmaceutical, and cosmetic industries. BICO is the future of life-saving treatments, as they enable customers to improve people’s health and lives.
+
+For more information visit  website [Kantify Website ](https://visikol.com/).
+
+
